--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ body {
   color: var(--white-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  border: 1px solid var(--main-color);
+  border: 1px solid var(--main-violet-color);
   display: flex;
   margin: 0 auto;
   align-items: center;
@@ -189,6 +189,7 @@ body {
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--hover-focus-color);
+  border-color: var(--hover-focus-color);
 }
 /* -------------FEAUTERS--------------- */
 .feauters {
@@ -251,7 +252,7 @@ body {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
-  width: calc((100%-72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 .team-title {
   margin-bottom: 72px;
@@ -414,6 +415,7 @@ body {
   width: calc((100% - 48px) / 3);
 }
 .portfolio-link {
+  display: block;
 }
 .portfolio-link:hover,
 .portfolio-link:focus {
